Tussenstand Laatste Hand

--- a/r-references.bib
+++ b/r-references.bib
@@ -116,7 +116,7 @@
    author = "RIVM",
    title = "Rioolwateronderzoek",
    year = "2020",
-   url = "https://www.rivm.nl/coronavirus-covid19/onderzoek/rioolwater",
+   url = "https://www.rivm.nl/coronavirus-covid-19/onderzoek/rioolwater",
    urldate = "2020-12-10"
  }
  @online{Rijksoverheid,
@@ -237,4 +237,58 @@
   journal={Journal of Neurotrauma},
   year={2020},
   publisher={Mary Ann Liebert, Inc., publishers 140 Huguenot Street, 3rd Floor New~.}
+}@Manual{R-DescTools,
+  title = {{DescTools}: Tools for Descriptive Statistics},
+  author = {Signorell {Andri et mult. al.}},
+  year = {2020},
+  note = {R package version 0.99.39},
+  url = {https://cran.r-project.org/package=DescTools},
+}
+@Manual{R-hash,
+  title = {hash: Full Feature Implementation of Hash/Associated
+Arrays/Dictionaries},
+  author = {Christopher Brown},
+  year = {2019},
+  note = {R package version 2.2.6.1},
+  url = {https://CRAN.R-project.org/package=hash},
+}
+@Manual{R-mapproj,
+  title = {mapproj: Map Projections},
+  author = {Doug McIlroy. Packaged for R by Ray Brownrigg and Thomas P Minka and transition to Plan 9 codebase by Roger Bivand.},
+  year = {2020},
+  note = {R package version 1.2.7},
+  url = {https://CRAN.R-project.org/package=mapproj},
+}
+@Manual{R-maps,
+  title = {maps: Draw Geographical Maps},
+  author = {Original S code by Richard A. Becker and Allan R. Wilks. R version by Ray Brownrigg. Enhancements by Thomas P Minka and Alex Deckmyn.},
+  year = {2018},
+  note = {R package version 3.3.0},
+  url = {https://CRAN.R-project.org/package=maps},
+}
+@Article{R-sp,
+  author = {Edzer J. Pebesma and Roger S. Bivand},
+  title = {Classes and methods for spatial data in {R}},
+  journal = {R News},
+  year = {2005},
+  volume = {5},
+  number = {2},
+  pages = {9--13},
+  month = {November},
+  url = {https://CRAN.R-project.org/doc/Rnews/},
+}
+@Manual{R-ggpubr,
+  title = {ggpubr: 'ggplot2' Based Publication Ready Plots},
+  author = {Alboukadel Kassambara},
+  year = {2020},
+  note = {R package version 0.4.0},
+  url = {https://CRAN.R-project.org/package=ggpubr},
+}
+
+@article{silver2020coronavirus,
+  title={Coronavirus case counts are meaningless},
+  author={Silver, Nate},
+  journal={FiveThirtyEight. April},
+  volume={4},
+  year={2020}
 }
